--- a/HJF_Rworkshop_08242023_pt2.Rmd
+++ b/HJF_Rworkshop_08242023_pt2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R, RStudio - understanding Packages (part 2)"
-subtitle: "R Overview Lecture: 12 Jan 2023"
+subtitle: "R Workshop: August 24, 2023"
 author: "[Melinda Higgins](https://melindahiggins.netlify.app/)"
 date: "Director Biostatistics & Data Core </br> School of Nursing - Emory University </br>"
 output:
@@ -194,7 +194,7 @@ knitr::include_url("https://www.bioconductor.org/")
 [https://github.com/search?l=R&q=packages&type=Repositories](https://github.com/search?l=R&q=packages&type=Repositories)
 
 ```{r out.width ='100%', echo=FALSE}
-knitr::include_graphics("GithubRPackages.png")
+knitr::include_graphics("GithubRPackages_Aug2023.png")
 ```
 
 ---
