--- a/HJF_Rworkshop_08242023_pt3.Rmd
+++ b/HJF_Rworkshop_08242023_pt3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "R, RStudio - intro to `ggplot2`"
-subtitle: "R Overview Lecture: 12 Jan 2023"
+subtitle: "R Workshop: August 24, 2023"
 author: "[Melinda Higgins](https://melindahiggins.netlify.app/)"
 date: "Director Biostatistics & Data Core </br> School of Nursing - Emory University </br>"
 output:
