--- a/HJF_Rworkshop_08242023_pt2.Rmd
+++ b/HJF_Rworkshop_08242023_pt2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R, RStudio - understanding Packages (part 2)"
+title: "R, RStudio - understanding Packages"
 subtitle: "R Workshop: August 24, 2023"
 author: "[Melinda Higgins](https://melindahiggins.netlify.app/)"
 date: "Director Biostatistics & Data Core </br> School of Nursing - Emory University </br>"
